k8s/facade-api-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: facade-api
  namespace: athena-dev
spec:
  selector:
    app.kubernetes.io/name: facade-api
    app.kubernetes.io/component: server
  ports:
    - port: 80
      targetPort: 8080
