k8s/facade-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: facade-api
  namespace: athena-dev
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    # nginx.ingress.kubernetes.io/whitelist-source-range: '10.10.0.0/16'
spec:
  rules:
    - host: facade-api.mustit.xyz
      http:
        paths:
          - path: /
            backend:
              serviceName: facade-api
              servicePort: 80
